RESOLVED FIXED79352
[GTK] Wrong signal name on emission in WebKitWindowProperties.cpp
https://bugs.webkit.org/show_bug.cgi?id=79352
Summary [GTK] Wrong signal name on emission in WebKitWindowProperties.cpp
Mario Sanchez Prada
Reported 2012-02-23 02:25:26 PST
In WebKitWindowProperties::webkitWindowPropertiesSetResizable, we currently have this: void webkitWindowPropertiesSetResizable(WebKitWindowProperties* windowProperties, bool resizable) { if (windowProperties->priv->resizable == resizable) return; windowProperties->priv->resizable = resizable; g_object_notify(G_OBJECT(windowProperties), "resizable-visible"); } ...which is a mistake since the signal is called 'resizable', not 'resizable-visible'
Attachments
Patch (2.22 KB, patch)
2012-02-23 02:28 PST, Mario Sanchez Prada
no flags
Carlos Garcia Campos
Comment 1 2012-02-23 02:28:25 PST
Right, it's a copy-paste error.
Mario Sanchez Prada
Comment 2 2012-02-23 02:28:42 PST
Carlos Garcia Campos
Comment 3 2012-02-23 02:31:25 PST
Comment on attachment 128443 [details] Patch Correct
WebKit Review Bot
Comment 4 2012-02-23 16:08:06 PST
Comment on attachment 128443 [details] Patch Clearing flags on attachment: 128443 Committed r108694: <http://trac.webkit.org/changeset/108694>
WebKit Review Bot
Comment 5 2012-02-23 16:08:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.