[GTK] Wrong signal name on emission in WebKitWindowProperties.cpp https://bugs.webkit.org/show_bug.cgi?id=79352

Patch by Mario Sanchez Prada <msanchez@igalia.com> on 2012-02-23
Reviewed by Philippe Normand.

Emit the signal 'resizable' instead of 'resizable-visible'.

* UIProcess/API/gtk/WebKitWindowProperties.cpp:
(webkitWindowPropertiesSetResizable): Use right signal name.

Canonical link: https://commits.webkit.org/96472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108694 268f45cc-cd09-0410-ab3c-d52691b4dbfc